--- a/.github/workflows/openapi_upload.yml
+++ b/.github/workflows/openapi_upload.yml
@@ -13,12 +13,12 @@ jobs:
       - name: 🔽 Checkout do Código
         uses: actions/checkout@v3
 
-      - name: 📦 Instalar JBang
+      - name: 📦 Installing JBang
         run: |
           curl -Ls https://sh.jbang.dev | bash
           echo "$HOME/.jbang/bin" >> $GITHUB_PATH
 
-      - name: 🚀 Executar o Script JBang
+      - name: 🚀 Executing Scripting JBang
         env:
           API_ENDPOINT: "https://seu-endpoint.com/api/upload"  # Altere para seu endpoint real
         run: jbang send_openapi.java
