Update openapi_upload.yml - automatic from git

--- a/.github/workflows/openapi_upload.yml
+++ b/.github/workflows/openapi_upload.yml
@@ -20,5 +20,5 @@ jobs:
 
       - name: 🚀 Executing Scripting JBang
         env:
-          API_ENDPOINT: ${{ vars.API_ENDPOINT }}  # endpoint to recebive the endpoint
+          API_ENDPOINT: ${{ vars.API_ENDPOINT }}  # capturing from Github
         run: jbang send_openapi.java
