--- a/.github/workflows/openapi_upload.yml
+++ b/.github/workflows/openapi_upload.yml
@@ -21,5 +21,5 @@ jobs:
 
       - name: 🚀 Executing Scripting JBang
         env:
-          API_ENDPOINT: ${{ secrets.API_ENDPOINT }}  # capturing from Github secret
+          API_ENDPOINT: ${{ secrets.API_ENDPOINT }}  # capturing from Github secret nw
         run: jbang send_openapi.java
