--- a/.github/workflows/deployKrakenD.yml
+++ b/.github/workflows/deployKrakenD.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main  # Change this if needed
+      - main  # Triggers on pushes to the 'main' branch
 
 jobs:
   build-and-push:
