--- a/gateways/krakend/Dockerfile
+++ b/gateways/krakend/Dockerfile
@@ -1,2 +1,2 @@
 FROM devopsfaith/krakend:2.9
-COPY krakend.json /etc/krakend/krakend.json
+COPY ./gateways/krakend/krakend.json /etc/krakend/krakend.json
