--- a/.github/workflows/deployKrakenD.yml
+++ b/.github/workflows/deployKrakenD.yml
@@ -27,14 +27,11 @@ jobs:
 
       - name: Push Docker Image
         run: docker push $IMAGE_NAME
-
-      - name: Save Docker Image as Tar Archive
-        run: docker save -o deploy.tar $IMAGE_NAME   
       
-      - name: Deploy Image to CapRrover
+      - name: Deploy to CapRover via Docker Image
         uses: caprover/deploy-from-github@v1.1.2
         with:
           server: "${{ secrets.CAPROVER_SERVER }}"
           app: "${{ secrets.APP_NAME }}"
           token: "${{ secrets.APP_TOKEN }}"
-          image: ${{ env.IMAGE_URL }}
+          image: ${{ env.IMAGE_URL }}       
