--- a/.github/workflows/deployKrakenD.yml
+++ b/.github/workflows/deployKrakenD.yml
@@ -27,6 +27,9 @@ jobs:
 
       - name: Push Docker Image
         run: docker push $IMAGE_NAME
+        
+      - name: Show IMAGE_NAME
+        run: echo "IMAGE_NAME is: $IMAGE_NAME"       
       
       - name: Deploy to CapRover via Docker Image
         uses: caprover/deploy-from-github@v1.1.2
