--- a/.github/workflows/deployKrakenD.yml
+++ b/.github/workflows/deployKrakenD.yml
@@ -29,7 +29,7 @@ jobs:
         run: docker push $IMAGE_NAME
         
       - name: Show IMAGE_NAME
-        run: printenv    
+        run: cat $GITHUB_ENV    
       
       - name: Deploy to CapRover via Docker Image
         uses: caprover/deploy-from-github@v1.1.2
