--- a/.github/workflows/deploy_krakend_caprover.yml
+++ b/.github/workflows/deploy_krakend_caprover.yml
@@ -44,4 +44,4 @@ jobs:
           server: "${{ secrets.CAPROVER_SERVER }}"
           app: "${{ secrets.APP_NAME }}"
           token: "${{ secrets.APP_TOKEN }}"
-          image: $IMAGE_NAME
+          image: "$IMAGE_NAME"
