--- a/.github/workflows/deploy_krakend_caprover.yml
+++ b/.github/workflows/deploy_krakend_caprover.yml
@@ -20,9 +20,10 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set Image Name
-        run: echo "IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/konneqt-sample-gateway:$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
+        #run: echo "IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/konneqt-sample-gateway:$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
+        run: echo "IMAGE_NAME=edgars/konneqt-sample-gateway:latest" >> $GITHUB_ENV
         env:
-          IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/konneqt-sample-gateway:$(echo ${{ github.sha }} | cut -c1-7)
+          IMAGE_NAME: IMAGE_NAME=edgars/konneqt-sample-gateway:latest
 
       - name: Build Docker Image
         run: docker build -t $IMAGE_NAME -f ./gateways/krakend/Dockerfile .
@@ -44,4 +45,4 @@ jobs:
           server: "${{ secrets.CAPROVER_SERVER }}"
           app: "${{ secrets.APP_NAME }}"
           token: "${{ secrets.APP_TOKEN }}"
-          image: "$IMAGE_NAME"
+          image: "edgars/konneqt-sample-gateway:latest"
