--- a/gateways/kong/kong.yml
+++ b/gateways/kong/kong.yml
@@ -16,13 +16,13 @@ services:
           replace:
             uri: /api/v1/Airport  # Rewrite to correct upstream path
 
-  - name: colombia-aicountry-info-service
+  - name: colombia-country-info-service
     url: https://api-colombia.com  # Base upstream server
     routes:
       - name: colombia-country-info
         paths:
           - /v1/colombia/info
-        strip_path: true  # Ensures Kong removes "/v1/colombia/airports"
+        strip_path: true  # Ensures Kong removes "/v1/colombia/info"
         methods:
           - GET
     plugins:
