--- a/.github/workflows/deploy_kong_caprover.yml
+++ b/.github/workflows/deploy_kong_caprover.yml
@@ -2,8 +2,8 @@ name: Deploy Kong Gateway
 
 on:
   push:
-    branches:
-      - main  # Triggers on pushes to the 'main' branch
+    paths:
+      - "./gateways/kong/kong.yml"  # Somente quando esse arquivo for modificado
 
 jobs:
   build-and-push:
