--- a/.github/workflows/deploy_krakend_caprover.yml
+++ b/.github/workflows/deploy_krakend_caprover.yml
@@ -2,8 +2,8 @@ name: Deploy KrakenD Gateway
 
 on:
   push:
-    branches:
-      - main  # Triggers on pushes to the 'main' branch
+    paths:
+      - "./gateways/krakend/krakend.json"  # Somente quando esse arquivo for modificado
 
 jobs:
   build-and-push:
