--- a/gateways/kong/kong.yml
+++ b/gateways/kong/kong.yml
@@ -22,7 +22,7 @@ services:
       - name: colombia-country-info
         paths:
           - /v1/colombia/info
-        strip_path: true  # Ensures Kong removes "/v1/colombia/info"
+        strip_path: true  # Ensures Kong removes "/v1/colombia/info" - changed
         methods:
           - GET
     plugins:
