--- a/.github/workflows/deploy_kong_caprover.yml
+++ b/.github/workflows/deploy_kong_caprover.yml
@@ -3,7 +3,7 @@ name: Deploy Kong Gateway
 on:
   push:
     paths:
-      - "/gateways/kong/kong.yml"  # Somente quando esse arquivo for modificado
+      - "gateways/kong/kong.yml"  # Somente quando esse arquivo for modificado
 
 jobs:
   build-and-push:
